feat(auth): google oauth
* feat(openapi): конфигурация google oauth и openapi

* feat(migrations): миграции для users и sessions

* feat(auth): сервис для google oauth

* feat(auth): миграция на goth

* tests(auth): дополнительные тесты

* tests(codecov): игнорирование файлов при расчете покрытия

* tests(repositories): дополнительные тесты

* build(docker): изменение переменных окружения

* ci(review): конфигурация для ai ревью

* fix(handlers): валидация обратной косой черты в return_to

* feat(middleware): прмоежуточное по для csfr и аутентификации

* refactor(backend): рефакторинг и добавление rbac

* refactor(frontend): генерация контрактов

* fix: apply CodeRabbit auto-fixes

Fixed 3 file(s) based on 3 unresolved review comments.


* Revert "fix: apply CodeRabbit auto-fixes"

This reverts commit 1811cddb65b5444df9f96311d050c8ab5c277aa8.

* ci(codecov): игнорирование файлов при расчете покрытия

* build(deps): обновление зависимости quic-go с 0.59.0 до 0.59.1

* fix(handlers): таймаут обращения к google

* fix(middleware): max age для куки csrf

* fix(internal): fail fast валидация для конфигурации маршрутизатора и аутентификации

* fix(handlers): время жизни csrf токена равен ttl сессии

* fix(handlers): логирование

* feat(frontend): аутентификация

* docs(agents): актуализация документации

* docs(arch): актуализация документации

* tests(tests): добавление новых тестов:

* fix(all): исправление замечаний ревью

* fix(frontend): исправление ролевой системы

* style(frontend): форматирование

---------
